<resources>
    <string name="app_name">CNCSection</string>
    <string name="title_activity_entry">Entry Activity</string>
    <string name="entry">Вход в систему</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sent">Отправить</string>
    <string name="filter_status">Сортировать от Создана до Выполнена</string>
    <string name="filter_people">Сортировать от А до Я</string>

    <string name="manager_header">Менеджер по планированию</string>
    <string name="item">Название детали</string>
    <string name="time">Дата создания заявки </string>
    <string name="time_start">Время производства</string>
    <string name="time_button"> </string>
    <string name="commentary">Комментарий </string>
    <string name="application">Создать заявку</string>
    <string name="applications">Заявки</string>
    <string name="search">Поиск</string>
    <string name="hint_1">Введите дату</string>
    <string name="hint_2">Напишите комментарий к заявке</string>
    <string name="hint_3">CNC-0001-AL</string>
    <string name="calendar_button_description"> Календарь  </string>
    <string name="calendar_description"> 01.09.2024  </string>

    <string name="application_number">Заявка №</string>
    <string name="status">Статус</string>
    <string name="status_filter">Введите статус</string>
    <string name="people_filter">Введите ФИО работника</string>


    <string name="master_header">МАСТЕР</string>
    <string name="estimated_time">Время производства (мин)</string>
    <string name="bench">Станки</string>
    <string name="equipment">Оснастки</string>
    <string name="operator">Операторы</string>
    <string name="tools">Инструменты</string>
    <string name="drawing">Чертёж</string>
    <string name="hint_drawing">as.ГУАП.431513.007</string>
    <string name="techProcess">Тех.процесс</string>
    <string name="add">+</string>
    <string name="delete">-</string>
    <string name="hint_techProcess">ТТК Чайник</string>


    <string name="operator_header">ОПЕРАТОР</string>
    <string name="order_status">Статус</string>
    <string name="order_number">Заказ №</string>
    <string name="open_drawing">Открыть чертёж</string>
    <string name="open_techProcess">Открыть техпроцесс</string>
    <string name="open_program">Открыть программу</string>


    <string name="registration_header">РЕГИСТРАЦИЯ</string>
    <string name="fio_f">Фамилия</string>
    <string name="fio_i">Имя</string>
    <string name="fio_o">Отчество</string>
    <string name="role">Должность</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="birthday">Дата рождения</string>
    <string name="choose_a_password">Введите пароль</string>
    <string name="re_password">Повторите пароль</string>
    <string name="date_description"> 01.09.2024  </string>

    <string name="deleteStaff">Удалить сотрудника</string>
    <string name="deleteOrder">Удалить заявку</string>

    <string name="createOrder">Заявка</string>
    <string name="createStaff">Добавить</string>
    <string name="listOrder">Список</string>
    <string name="ordercreate_caps">"СОЗДАНИЕ ЗАЯВКИ"</string>
    <string name="ordergenerate_caps">"ОФОРМЛЕНИЕ ЗАЯВКИ"</string>
    <string name="listorder_caps">"СПИСОК ЗАЯВОК"</string>
    <string name="list_people_caps">"СПИСОК РАБОТНИКОВ"</string>
    <string name="infoorder_caps">"ЗАЯВКА"</string>
    <string name="person_caps">"СОТРУДНИК"</string>
    <string name="delete_order">"Удалить заявку"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_order">Оформить заявку</string>

    <string name="are_you_sure">"Вы уверены?"</string>
    <string name="yes">Да</string>
    <string name="cancel">Закрыть</string>

    <string name="first_name">Введите фамилию</string>
    <string name="second_name">Введите имя</string>
    <string name="third_name">Введите отчество</string>

    <string name="saveButton">Сохранить</string>

    <string name="date_master">Дата оформления заявки</string>
</resources>