<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry"
            android:layout_gravity="center"
            android:textColor="@color/entry"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:hint="@string/login" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:textColor="@color/error_color"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:onClick="goNext"
            android:text="@string/sent"
            android:textAllCaps="true"
            android:textColorLink="#4D174D"
            android:textSize="16sp" />

        </LinearLayout>

</FrameLayout>