<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_profile"
    tools:context=".MainActivityManager">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordercreate_caps"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:textColor="@color/rus_white"
            android:textSize="25dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardViewContacts"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/rus_white"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.Cut.Fragment.Contacts">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/item_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/item"
                            android:textSize="18dp" />

                        <EditText
                            android:id="@+id/item_number_entry"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="18dp"
                            android:hint="@string/hint_3"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/production_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/time"
                            android:textSize="18sp" />

                        <ImageButton
                            android:id="@+id/calendar"
                            android:layout_width="38dp"
                            android:layout_height="38dp"
                            android:background="@drawable/baseline_calendar_month_24"
                            android:contentDescription="@string/calendar_button_description" />

                        <EditText
                            android:id="@+id/calendar_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/calendar_description"
                            android:inputType="date"
                            android:textSize="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/commentary"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="15dp"

                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/commentary"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/commentary_entry"
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:background="@drawable/shape_of_elements"
                            android:textSize="18sp"
                            android:gravity="bottom"
                            android:layout_marginBottom="15dp"
                            android:hint="@string/hint_2"
                            android:inputType="textMultiLine"
                            android:maxLength="200" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textColor="@color/white"
                        android:text="@string/application"
                        android:background="@drawable/shape_new_gradient"/>

                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</FrameLayout>
