<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bac"
    tools:context=".ExecuteOrderActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="40dp"
        android:background="@color/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/operator_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/operator_header"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </TableLayout>

    <TextView
        android:id="@+id/order_status"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/round"
        android:gravity="center"
        android:text="@string/order_status"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order_number"
        android:layout_width="174dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round"
        android:gravity="center"
        android:text="@string/order_number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Spinner
        android:id="@+id/order_status_spinner"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="56dp"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/open_drawing_button"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:text="@string/open_drawing"
        app:layout_constraintBottom_toTopOf="@+id/open_techProcess_button"
        app:layout_constraintStart_toStartOf="@+id/open_techProcess_button" />

    <Button
        android:id="@+id/open_techProcess_button"
        android:layout_width="199dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="28dp"
        android:text="@string/open_techProcess"
        app:layout_constraintBottom_toTopOf="@+id/order_status"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>