<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rus_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registration_header"
            android:gravity="center"
            android:text="@string/registration_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="4dp">


                <TextView
                    android:id="@+id/fio_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/fio_f"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/fio_f_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:gravity="left"
                    android:inputType="text"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/fio_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/fio_i"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/fio_i_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:gravity="left"
                    android:inputType="text"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/fio_o"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/fio_o"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/fio_o_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_input"
                    android:padding="12dp"
                    android:gravity="left"
                    android:inputType="text"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/role"
                    android:text="@string/role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/role_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="start"
                    android:dropDownVerticalOffset="50dp"
                    android:background="@drawable/spinner_shape"
                    android:layout_gravity="end" />


                <TextView
                    android:id="@+id/birthday"
                    android:text="@string/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/calendar_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_input"
                        android:padding="12dp"
                        android:hint="@string/date_description"
                        android:inputType="date"
                        android:paddingEnd="60dp"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/calendar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/baseline_calendar_month_24"
                        android:contentDescription="@string/calendar_button_description"
                        android:scaleType="fitCenter" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/outlinedTextFieldPasswordSignUpFirst"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/rus_dark_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditPasswordSignUpFirst"
                        android:background="@drawable/custom_input"
                        style="@style/TextInputEditTextStyleSign"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldPasswordSignUpSecond"
                    style="@style/TextInputLayoutStyle"
                    android:hint="@string/re_password"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/rus_dark_blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditPasswordSignUpSecond"
                        android:background="@drawable/custom_input"
                        style="@style/TextInputEditTextStyleSign"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error_text_view"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/outlinedTextFieldLoginSignIn"
                    android:textColor="@color/rus_red"
                    android:textSize="16sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_button"
                    style="@style/AppCompatButtonStyle"
                    android:onClick="goRegistToDB"
                    android:text="@string/to_register" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>
